--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ section a {
 
 .projects {
     padding:50px;
+    margin: 25px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -107,12 +108,13 @@ section a {
 .projectContainer img{
     height: 400px;
     width: 300px;
+    font-weight: bold;
 }
 
 /*Highlighted Projects can be made larger amongst other things */
 .projectHighlight img {
-    height: 700px;
-    width: 400px;
+    height: 533px;
+    width: 300px;
 }
 
 .subheading {
